--- a/project_analysis.html
+++ b/project_analysis.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/main.css">
 		<title>Project Analysis: Truffles and Trifles</title>
 	</head>
 	<body>
 		<h1>Project Analysis: Truffles &amp; Trifles</h1>
+		<div id="wrapper">
 		<h2>Site Intent</h2>
 		<p> The site that I have chose to update is for Truffles &amp; Trifles, which is an Orlando cooking school that specializes in single classes.  Currently, the site has a lot of information and text.  Most of that text can be condensed or completely removed.  My first task will be to eliminate content that is redundant or too long.  I will also create a design palette that is easy on the eyes and interesting to the consumer.  The site needs to be organized with more information on the home screen, so that the user would not have to click to find essential information.  A Call-to-Action is needed, as well as a clear escape hatch on all pages.  A lot of the different pages could be condensed into one simple "Offerings" page.  The "Spouse Programs" page is especially useless.  Some of the links also appear to be broken.  
 		</p>
@@ -15,9 +17,7 @@
 		<h2>Targeted Audience</h2>
 		<p>According to Alexa.com, Truffles &amp; Trifles main audience appears to be American women with a college degree, who have no children and browse from work.  I think that the targeted audience should be larger than just women.  The site should appeal to business people who would want to hold their team building activites there.  This demographic could spend more money than an Orlando family having a birthday party for their 10-year-old.  Another demographic they should reach out to people who want to have parties.  I know that is a large demographic, but if Truffles &amp; Trifles added like a Bridal Shower package or some other ideas like a Mother Daughter evening, they could reach out to a larger group of people.
 		</p>
+</div>
 
-	<footer>
-	Callie Kavourgias
-	</footer>
 	</body>
 	</html>
